fixed small alignment bug in profile page

--- a/frontend/src/app/components/ProfileCard/ProfileCard.css
+++ b/frontend/src/app/components/ProfileCard/ProfileCard.css
@@ -1,3 +1,7 @@
 #profile-card-container {
-    border:1px solid red;
+    /*grid-row-start: 1;*/
+    /*grid-row-end: 2;*/
+    border: 1px solid red;
+    /*border:0;*/
+    display: grid;
 }
